# ChangeLog for dev-python/carrot
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/carrot/ChangeLog,v 1.1 2012/10/25 05:09:47 patrick Exp $

*carrot-0.10.7 (25 Oct 2012)

  25 Oct 2012; Patrick Lauer <patrick@gentoo.org> +carrot-0.10.7.ebuild,
  +metadata.xml:
  Initial import, borrowed from the hyves openstack-overlay