@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST carrot-0.10.7.tar.gz 62069 SHA256 cb46374f3c883c580d142a79d2609883713a867cc86e0514163adce784ce2468 SHA512 3814089acc0b4ec51fc67470f0c3f21b740c5b7ed284d61919d6796f6e0529cb3d5e9c1a4cbf8360f98c76b520e5b73b43fa744775f4c6e3a629d77a46a10f3f WHIRLPOOL 0148953c40008002c8c4c95454918840c086d9215e25cdfd6dae7579d81544f57533902409af8f0caab9b1a5c72d72a9505e846d9e738804668f7dcd7af7b7a9
-EBUILD carrot-0.10.7.ebuild 608 SHA256 b03363cfc8a2444dc4c1b4bdf04e1c14a17585f8f08d642ce2e7ea743aeceb32 SHA512 0d63b7bc215d1f9be183f9157a19fbb0e8df25abc2a13fd8f0f6efbcd62ffe8967b8d33cf7c9bd37d67423e84bf5f32b48efb643c04a8f310801f2173b8088aa WHIRLPOOL a2063d71662422b02aaf10baf802ec260ebbdd77791e0a4db4c9cbff7317b88252776ca7a5cfd35a59956cf8bf97106e5455182d3dbcb04acb6ba66630e2c716
-MISC ChangeLog 388 SHA256 6e86f2448c074b4a948b46e8a353760a56c669619d40abb8bcd2aded3304b228 SHA512 2311692f1dcb62abc16bbe03f7d5d569b3890743835b33a147219b05d28a653cd81dfe273ccd9ed2135048b23f4c447c223045b289e52be5b433f4e54c2bcf49 WHIRLPOOL d7bc3c139a73ff441cc7ae94e58394e7c6acb58fc33d8b613fd0c057e1db5c29014899cac5bcbd4341dd01629daae16b840048d16db40474a10871be2a5f1eae
+EBUILD carrot-0.10.7-r1.ebuild 819 SHA256 15803c9614279e7e18142b1a934d15ab8bfeb60fdc05fc3b6ffe26f29c1145b2 SHA512 2d4de54b2efb5513a1f7c0f9ee7fb63cecb4eea85b4080957a281cf92047b75994d90679fdef3819214e170a7e6512e73e12e928b8cc69a143a892d25ea91ea9 WHIRLPOOL b6165c0663fbbba27cf475ef6f1670b7ce7b864d521f46e7c0fa91afd95671cb0a59079baced434ae658e3a6cde32ea73034f314fc1848d16a8ec7165a58720a
+MISC ChangeLog 583 SHA256 447fcf67a56ed8e262f65726691d521c9aea37844da689d087bf6bc12fe54f48 SHA512 65036e9bce359317de00882845c34717ad3669affc09e373b169c8a47d4615c43c97b2d48b0ddce6ebecacf9922b1a2416c93bc85f00d9d31bc2e336e064c1c1 WHIRLPOOL 2add54fa78cacae9046f8854c50c0513299bf9c28677da9de6cef5e77638ad2ce1bda1c3fca11e0e82ab8d68526ec6e33e44ef35700f0e91e0a63c9e9bc5f88f
 MISC metadata.xml 168 SHA256 db5402adf802b8c5de5e9e13d3d1eb3034c61285d39dd6ce8334ff438a1010ad SHA512 58b8a8c1320e8f61b986007c257b544d2fcffe5263c61feb536570efaf72f46a36f091736844a0e2857d4064668e165d88b1760d7ceb7d55beeec05b86da90d6 WHIRLPOOL f1730916b611218c8a1da142ec600f046df6d1e28a2f83af51c2eb2f7a51b30665fdfc943155d4cded89ab24de002a9a91e030b544ce8bc9c625c97a96c65d22
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlThU6EACgkQso7CE7gHKw2YmwCg11mxG4jZDMenPb3wWFM9D5Ax
+pWIAoKFVKbOWSe9CENvZ0J/ynVFSUqTr
+=Gp1x
+-----END PGP SIGNATURE-----
