@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/carrot
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/carrot/ChangeLog,v 1.1 2012/10/25 05:09:47 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/carrot/ChangeLog,v 1.2 2015/02/16 02:18:58 idella4 Exp $
+
+*carrot-0.10.7-r1 (16 Feb 2015)
+
+  16 Feb 2015; Ian Delaney <idella4@gentoo.org> +carrot-0.10.7-r1.ebuild,
+  -carrot-0.10.7.ebuild:
+  revbump; convert -> distutils-r1, add doc build, rm initial
 
 *carrot-0.10.7 (25 Oct 2012)
 
